fixed nav color error
Fixed error where hovering over navbar option, both the text and hover glow would be purple, making text unreadable

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ ul.navbar a {
 
 ul.navbar a:hover {
     background-color: #734f9a;
+    color:white;
 }
 
 /* Content Styles */
